k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sakumari
  labels:
    name: sakumari
    app: sakumari
    environment: production
